--- a/themes/literallygoogle/style.css
+++ b/themes/literallygoogle/style.css
@@ -60,8 +60,8 @@ var {
     --lg-drawer-ease-close: cubic-bezier(0.4, 0, 0.2, 1);
     --lg-drawer-width-mobile: min(23.5rem, calc(100vw - 1.5rem));
     --lg-drawer-width-desktop: min(23.5rem, calc(100vw - 2rem));
-    --lg-drawer-handle-width: 1.625rem;
-    --lg-drawer-handle-height: 0.1875rem;
+    --lg-drawer-handle-width: 2.25rem;
+    --lg-drawer-handle-height: 0.25rem;
     --theme-radius-xs: 4px;
     --theme-radius-sm: 8px;
     --theme-radius-md: 12px;
@@ -2763,8 +2763,8 @@ body {
         height: var(--lg-drawer-handle-height);
         border-radius: 100px;
         transform: translate(-50%, -50%);
-        background: color-mix(in srgb, var(--white) 92%, transparent);
-        box-shadow: 0 1px 0 color-mix(in srgb, #000 10%, transparent);
+        background: color-mix(in srgb, var(--text-secondary) 75%, transparent);
+        box-shadow: 0 1px 0 color-mix(in srgb, var(--text-primary) 6%, transparent);
     }
 
     body > #image-filters-bar.lg-image-fab-drawer
@@ -3213,7 +3213,7 @@ body {
         height: var(--lg-drawer-handle-height);
         border-radius: 100px;
         transform: translate(-50%, -50%);
-        background: color-mix(in srgb, var(--text-secondary) 52%, transparent);
+        background: color-mix(in srgb, var(--text-secondary) 75%, transparent);
         box-shadow: 0 1px 0 color-mix(in srgb, var(--text-primary) 6%, transparent);
     }
 
